<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="renata.kenndroid.MainActivity">

    <!-- Itens do menu principal -->
    <item
        android:id="@+id/action_config"
        android:orderInCategory="100"
        android:icon="@drawable/ic_config"
        android:title="@string/action_config"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_canil"
        android:icon="@drawable/ic_canil"
        android:orderInCategory="100"
        android:title="@string/action_canil"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_animal"
        android:icon="@drawable/ic_animais"
        android:orderInCategory="100"
        android:title="@string/action_animal"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_acasalamentos"
        android:orderInCategory="100"
        android:icon="@drawable/ic_acasalamento"
        android:title="@string/action_acasalamentos"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_vendas"
        android:orderInCategory="100"
        android:icon="@drawable/ic_vendas"
        android:title="@string/action_vendas"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_clientes"
        android:orderInCategory="100"
        android:icon="@drawable/ic_clientes"
        android:title="@string/action_clientes"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_clinicas"
        android:orderInCategory="100"
        android:icon="@drawable/ic_clinicas"
        android:title="@string/action_clinicas"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_veterinarios"
        android:orderInCategory="100"
        android:icon="@drawable/ic_veterinarios"
        android:title="@string/action_veterinarios"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_vacinas"
        android:orderInCategory="100"
        android:icon="@drawable/ic_vacinas"
        android:title="@string/action_vacinas"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_eventos"
        android:orderInCategory="100"
        android:icon="@drawable/ic_eventos"
        android:title="@string/action_eventos"
        app:showAsAction="never" />
</menu>
