<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="visible"
                app:srcCompat="@drawable/ic_veterinarios" />

            <TextView
                android:id="@+id/titulo_cadVet"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="0dp"
                android:text="@string/titulo_cadVet"
                android:layout_gravity="center_vertical"
                android:textSize="20dp" />
        </LinearLayout>

    <EditText
        android:id="@+id/edt_nome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/edt_nome" />

    <EditText
        android:id="@+id/edt_especialidade"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/edt_especialidade" />

    <EditText
        android:id="@+id/edt_cpf"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/edt_cpf" />

    <EditText
        android:id="@+id/edt_cidade"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/edt_cidade" />

    <EditText
        android:id="@+id/edt_estado"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/edt_estado" />

    <EditText
        android:id="@+id/edt_end"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/edt_end" />

    <EditText
        android:id="@+id/edt_compl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/edt_compl" />

    <EditText
        android:id="@+id/edt_pt_ref"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/edt_pt_ref" />

    <EditText
        android:id="@+id/edt_cep"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/edt_cep" />

    <EditText
        android:id="@+id/edt_fone1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text|phone"
        android:hint="@string/edt_fone1" />

    <EditText
        android:id="@+id/edt_fone2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text|phone"
        android:hint="@string/edt_fone2" />

    <EditText
        android:id="@+id/edt_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:hint="@string/edt_email" />

    <Button
        android:id="@+id/button"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:backgroundTint="@android:color/holo_green_light"
        android:text="@string/btn_cadastrar" />

    </LinearLayout>
</ScrollView>