<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <!-- Titulo da Tela-->
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_canil" />

        <TextView
            android:id="@+id/titulo_cad"
            android:layout_width="374dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:textSize="20dp"
            android:text="@string/titulo_cadClinica" />

    </LinearLayout>

    <!-- inicio do cadastro-->
    <EditText
        android:id="@+id/edt_nome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/edt_nome" />

    <EditText
        android:id="@+id/edt_cnpj"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/edt_cnpj" />

    <EditText
        android:id="@+id/edt_razao_social"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/edt_razao_social" />

    <EditText
        android:id="@+id/edt_cidade"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/edt_cidade" />

    <EditText
        android:id="@+id/edt_estado"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/edt_estado" />

    <EditText
        android:id="@+id/edt_end"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/edt_end" />

    <EditText
        android:id="@+id/edt_compl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/edt_compl" />

    <EditText
        android:id="@+id/edt_pt_ref"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/edt_pt_ref" />

    <EditText
        android:id="@+id/edt_cep"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/edt_cep" />

    <EditText
        android:id="@+id/edt_fone1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text|phone"
        android:hint="@string/edt_fone1" />

    <EditText
        android:id="@+id/edt_fone2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text|phone"
        android:hint="@string/edt_fone2" />

    <EditText
        android:id="@+id/edt_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:hint="@string/edt_email" />

        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:gravity="center">

            <Button
                android:id="@+id/salvar"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@android:color/holo_green_light"
                android:text="@string/btn_cadastrar" />
            <Button
                android:id="@+id/apagar"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@android:color/holo_red_light"
                android:text="Apagar"
                android:visibility="gone"/>
        </LinearLayout>
    </LinearLayout>
</ScrollView>